kubernetes/infrastructure/vault/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vault
  namespace: vault
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
    - fromEntities:
        - ingress
        - cluster
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - cluster
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
            - port: "8201"
              protocol: TCP
    - toCIDR:
        - 10.0.4.0/24
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
